--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,9 +13,9 @@ main:
   - name: People
     url: people
     weight: 10
-  - name: Projects
-    url: event
-    weight: 20
+#  - name: Projects
+#    url: event
+#    weight: 20
 #  - name: Publications
 #    url: publication
 #    weight: 50
