--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
 #  - name: News
 #    url: post
 #    weight: 20
-  - name: People
-    url: people
-    weight: 10
+#  - name: People
+#    url: people
+#    weight: 10
 #  - name: Projects
 #    url: event
 #    weight: 20
