--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,17 +2,17 @@
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
-
-main:
-#  - name: Tour
-#    url: tour
+#
+#main:
+##  - name: Tour
+##    url: tour
+##    weight: 10
+##  - name: News
+##    url: post
+##    weight: 20
+#  - name: People
+#    url: people
 #    weight: 10
-#  - name: News
-#    url: post
-#    weight: 20
-  - name: People
-    url: people
-    weight: 10
 #  - name: Projects
 #    url: event
 #    weight: 20
